--- a/src/scss/components/_weather-summary.scss
+++ b/src/scss/components/_weather-summary.scss
@@ -24,6 +24,12 @@
             grid-template-columns: repeat(5, 1fr);
             cursor: pointer;
 
+            @media screen and (max-width: 750px) {
+                grid-template-columns: repeat(3, 1fr);
+                align-content: center;
+                justify-items: center;
+            }
+
             .humidity-container {
                 @include flex(flex-start, center, row);
                 gap: 0.5rem;
